# aika-python-bindings

./: pom.xml
src/main/cpp/: CMakeLists.txt  aika-bindings.cpp  hacky_built_workaround.sh
src/main/java/network/aika/: AikaBindings.java
src/main/python/: setup_env.sh  test.py
